k8s/service3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: denysdev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/service3/
            pathType: "Prefix"
            backend:
              service:
                name: denysdev
                port:
                  number: 80
